<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Boa Viagem</string>
    <string name="description"> </string>
    <string name="descricao"> Descrição </string>
    <string name="categoria"> Categoria </string>
    <string name="local"> Local </string>
    <string name="gastei"> Gastei </string>
    <string name="valor"> Valor </string>
    <string name="data"> Data </string>
    <string name="salvar"> Salvar </string>
    <string name="quantidade_pessoas"> Quantidade de Pessoas </string>
    <string name="orcamento"> Orçamento </string>
    <string name="data_saida"> Data de Saída </string>
    <string name="data_chegada"> Data de Chegada </string>
    <string name="lazer"> Lazer </string>
    <string name="selecione"> Selecione </string>
    <string name="negocios"> Negócios </string>
    <string name="tipo_da_viagem"> Motivo da Viagem </string>
    <string name="destino">Destino</string>
    <string name="usuario">Usuário</string>
    <string name="senha">Senha</string>
    <string name="entrar">Entrar</string>
    <string name="novo_gasto">Novo Gasto</string>
    <string name="nova_viagem">Nova Viagem</string>
    <string name="minhas_viagens">Minhas Viagens</string>
    <string name="configuracoes">Configurações</string>
    <string name="erro_autenticacao">Usuário e/ou senha incorretos</string>
    <string name="action_settings">Settings</string>
    
    <string-array name="categoria_gasto">
        <item >Alimento</item>
        <item >Combustível</item>
        <item >Transporte</item>
        <item >Hospedagem</item>
        <item >Outros</item>
    </string-array>

</resources>
